--- a/src/SSISClient/SSISClient.fsproj
+++ b/src/SSISClient/SSISClient.fsproj
@@ -74,6 +74,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
